--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,726 @@
-.container-fluid{
-    background: orange;
+*{
+    margin: 0 10px;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", serif;
+}
+/* variables */
+:root {
+    --main-color: #0FBF61;
+    --navy-blue: #151D41;
+    --white: #fff;
+    --black: #000;
+    --padding: 10px 20px;
+}
+
+.btn-pri {
+    padding: var(--padding);
+    border: none;
+    outline: none;
+    background-color: var(--white);
+    color: var(--white);
+    font-size: 1rem;
+}
+.hire-me{
+    position: relative;left: 1050px;bottom: 550px;
+    background-color: #fff;
+    color: #0FBF61;
+    padding: 8px;
+    width: 80px;
+    height: 30px;
+    align-items: center;
+}
+
+/* navigation styles */
+header {
+    height: 5rem;
+    width: 100%;
+    background-color: var(--white);
+}
+header nav {
+    height: 100%;
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+}
+header nav div ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3.5rem;
+    list-style: none;
+}
+/* hero section styles */
+.hero {
+    display: grid;
+    height: 100vh;
+    width: 100%;
+    grid-template-columns:0.2fr 1fr 1fr;
+    
+}
+.welcome{
+    position: relative;
+    left: 50px;
+    background-color: #9fd9ba;
+    color: #0FBF61;
+    padding: var(--padding); width: 200px;
+    
+}
+.christ{
+    position: relative;
+    left: 50px;
+}
+.web{
+    position: relative;
+    left: 50px;
+    padding: 10px 5px;
+}
+.lorem{
+    position: relative;
+    left: 52px;
+    padding: 10px 5px;
+}
+
+.hero .image{
+    display:grid;
+    flex-direction:column;
+    justify-content: first baseline;
+    padding: 0px 50px;
+
+}
+
+.hero .image .rounded-rectangle{
+    height: 25rem;
+    width: 40rem;
+    background-color: var(--main-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30rem;
+    -webkit-transform: rotate(-40deg);
+    position: relative;
+    left: 250px;
+    top: -70px;
+}   
+
+.hero .image .rounded-rectangle img {
+    height: 20rem;
+    width: 20rem;
+    border-radius: 50%;
+    object-fit: cover;
+    -webkit-transform: rotate(40deg);
+    position: relative; 
+    right: 120px;
+    top: -5px;
+    border: 12px solid var(--white);
+}
+
+.port {
+color: var(--black);
+font-size: 2rem;
+}
+span {
+    background-color: var(--main-color);
+    color: #fff;
+    font-size: 2rem;
+    position: relative;right: 18px;
+    padding: 5px;
+}
+.hire {
+    background-color: var(--main-color);
+    color: #fff;
+    padding: var(--padding);
+    position: relative;
+    top: 50px;
+    right: 10px;
+    
+}
+.explore {
+    background-color: #fff;
+    color:#000;
+    box-sizing: var(--black);
+    padding: var(--padding);
+    position: relative;
+    top: 50px;
+    right: 20px;
+    bottom: 100px;
+}
+.circle-o{
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    border: solid 20px;
+    display: inline-block;
+    border-color: var(--main-color);
+    background-color: transparent;
+    position: relative; bottom: 600px; right: 60px;
+    z-index: 5;
+}
+.img-2{
+    position: relative;bottom: 690px; left: 30px;
+}
+.twitter{
+    background-color: #0FBF61;
+    width: 30px;
+    height: 20px;
+    display: flex;
+    border-radius: 5px;
+}
+.social{
+    list-style: none;
+    position: relative;right: 70px;
+}
+.btn-about{
+    color: var(--main-color);
+    background-color: rgb(151, 247, 213);
+    border: none;
+    padding: var(--padding);
+    position: relative;left: 500px; bottom: 1000px;
+}
+.project{
+    position: relative;left: 500px; bottom: 980px;
+}
+.iam{
+    position: relative;left: 500px; bottom: 950px;
+}
+.job{
+    position: relative;left: 500px; bottom: 920px;
+}
+.download{
+    position: relative;left: 500px; bottom: 900px;
+    background-color: #0FBF61;
+    color: #fff;
+    padding: 20px; width: 200px; height: 50px;
+    border: 0px;
+}
+.green{
+    position: relative; bottom: 250px;  left: 120px;
+}
+.design-1{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: 
+    radial-gradient(closest-side, rgb(252, 250, 250) 94%, transparent 50% 100%), 
+    conic-gradient( green 50%, rgb(252, 251, 251) 0);
+    position: relative; bottom: 790px; left: 110px;
+}
+.design-2{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background:
+    radial-gradient(closest-side, rgb(252, 250, 250) 94%, transparent 50% 100%), 
+    conic-gradient( green 75%, rgb(252, 251, 251) 0);
+    position: relative; bottom: 950px; left: 380px;
+}
+.design-3{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background:
+    radial-gradient(closest-side, rgb(252, 250, 250) 94%, transparent 50% 100%), 
+    conic-gradient( green 20%, rgb(252, 251, 251) 0);
+    position: relative;bottom: 1110px; left: 630px;
+}
+.design-4{
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background:
+    radial-gradient(closest-side, rgb(252, 250, 250) 94%, transparent 50% 100%), 
+    conic-gradient( green 75%, rgb(252, 251, 251) 0);
+    position: relative;bottom: 1270px;left: 900px;
+}
+.service{
+    position: relative; bottom: 1200px; 
+    left: 500px;
+    background-color: #9fd9ba;
+    color: #0FBF61;
+    padding: var(--padding); width: 200px; height: 35px;
+    text-align: center;
+}
+.feature{
+    position: relative; bottom: 1180px;
+    left: 480px;
+}
+.icon1{
+    position: relative; bottom: 1160px; 
+    left: 140px;
+}
+.circle-1{
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    border: solid 2px;
+    display: inline-block;
+    border-color: var(--main-color);
+    background-color: transparent;
+    position: relative; bottom: 1250px; left: 120px;
+    z-index: 5;
+}
+.web-1{
+    position: relative; bottom: 1250px; left: 130px;
+}
+.dash-1{
+    position: relative; bottom: 1260px; left: 120px;
+    color: #0FBF61;
+}
+.para-1{
+    position: relative; bottom: 1250px;  left: 130px;
+    color: #000;
+}
+.know-1{
+    position: relative; bottom: 1250px; left: 130px;
+    background-color: #0FBF61; color: #fff;
+    padding: 5px 5px;
+    border: none;
+}
+
+
+.icon2{
+    position: relative; bottom: 1460px;
+    left: 510px;
+}
+.circle-2{
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    border: solid 2px;
+    display: inline-block;
+    border-color: var(--main-color);
+    background-color: transparent;
+    position: relative; bottom: 1540px; left: 490px;
+    z-index: 5;
+}
+.web-2{
+    position: relative; bottom: 1540px; left: 500px;
+}
+.dash-2{
+    position: relative; bottom: 1557px; left: 500px;
+    color: #0FBF61;
+}
+.para-2{
+    position: relative; bottom: 1550px; left: 500px;
+}
+.know-2{
+    position: relative; bottom: 1530px; left: 500px;
+    background-color: #0FBF61; color: #fff;
+    padding: 5px 5px;
+    border: none;
+}
+
+.icon-3{
+    position: relative; bottom: 1760px;
+    left: 900px;
+   
+}
+.circle-3{
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    border: solid 2px;
+    display: inline-block;
+    border-color: var(--main-color);
+    background-color: transparent;
+    position: relative; bottom: 1830px; left: 880px;
+    z-index: 5;
+}
+
+.web-3{
+    position: relative; bottom: 1830px; left: 890px;
+}
+.dash-3{
+    position: relative; bottom: 1850px; left: 890px;
+    color: #0FBF61;
+}
+.para-3{
+    position: relative; bottom: 1840px; left: 900px;
+}
+.know-3{
+    position: relative; bottom: 1830px; left: 900px;
+    background-color: #0FBF61; color: #fff;
+    padding: 5px 5px;
+    border: none;
+}
+
+.icon-4{
+    position: relative; bottom: 1700px;
+    left: 100px; color: #0FBF61;
+}
+.circle-4{
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    border: solid 2px;
+    display: inline-block;
+    border-color: var(--main-color);
+    background-color: transparent;
+    position: relative; bottom: 1780px; left: 80px;
+    z-index: 5;
+}
+.web-4{
+    position: relative; bottom: 1780px; left: 100px;
+}
+.dash-4{
+    position: relative; bottom: 1790px; left: 90px;
+    color: #0FBF61;
+}
+.para-4{
+    position: relative; bottom: 1790px; left: 100px;
+}
+.know-4{
+    position: relative; bottom: 1790px; left: 100px;
+    background-color: #0FBF61; color: #fff;
+    padding: 5px 5px;
+    border: none;
+}
+
+
+.icon-5{
+    position: relative; bottom: 2000px;
+    left: 480px;
+}
+.circle-5{
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    border: solid 2px;
+    display: inline-block;
+    border-color: var(--main-color);
+    background-color: transparent;
+    position: relative; bottom: 2080px; left: 460px;
+    z-index: 5;
+}
+.web-5{
+    position: relative; bottom: 2080px; left: 460px;
+}
+.dash-5{
+    position: relative; bottom: 2095px; left: 450px;
+    color: #0FBF61;
+}
+.para-5{
+    position: relative; bottom: 2090px; left: 460px;
+}
+.know-5{
+    position: relative; bottom: 2090px; left: 460px;
+    background-color: #0FBF61; color: #fff;
+    padding: 5px 5px;
+    border: none;
+}
+
+.icon-6{
+    position: relative; bottom: 2300px;
+    left: 900px;
+}
+.circle-6{
+    height: 100px;
+    width: 100px;
+    border-radius: 100px;
+    border: solid 2px;
+    display: inline-block;
+    border-color: var(--main-color);
+    background-color: transparent;
+    position: relative; bottom: 2380px; left: 880px;
+    z-index: 5;
+}
+.web-6{
+    position: relative; bottom: 2380px; left: 900px;
+}
+.dash-6{
+    position: relative; bottom: 2395px; left: 890px;
+    color: #0FBF61;
+}
+.para-6{
+    position: relative; bottom: 2390px; left: 900px;
+}
+.know-6{
+    position: relative; bottom: 2390px; left: 900px;
+    background-color: #0FBF61; color: #fff;
+    padding: 5px 5px;
+    border: none;
+}
+.dotted{
+    position: relative; bottom: 2700px; left: 900px;
+}
+
+.skill{
+    position: relative; bottom: 2750px; 
+    left: 90px;
+    background-color: #9fd9ba;
+    color: #0FBF61;
+    width: 100px; height: 35px;
+    text-align: center;
+    border: none;
+}
+.hire-2{
+    background-color: #0FBF61;
+    color: #fff;
+    padding: 15px 30px;
+    border: none;
+    position: relative; bottom: 2800px; left: 1100px;
+}
+.exper{
+    position: relative;bottom: 2730px; left: 90px;
+}
+.progress-1{
+    display: flex;
+    flex-direction: row;
+    gap: 8rem;
+    position: relative;bottom: 2730px; left: 100px;
+    font-weight: 300;
+}
+
+
+.port-2{
+    position: relative; bottom: 2600px; 
+    left: 450px;
+    background-color: #9fd9ba;
+    color: #0FBF61;
+    width: 120px; height: 35px;
+    text-align: center;
+    border: none;
+}
+.work{
+    position: relative; bottom: 2580px; 
+    left: 400px;
+}
+.all{
+    position: relative; bottom: 2560px; 
+    left: 380px;
+    display: flex;
+}
+.poster{
+    position: relative; bottom: 2500px; 
+    left: 100px;
+    display: flex;
+    gap: 20px;
+}
+.view{
+    position: relative; bottom: 2480px; 
+    left: 520px;
+    background-color: green;
+    color: white;
+    width: 120px; height: 35px;
+    text-align: center;
+    border: none;
+    padding: var(--padding);width: 180px; height: 70PX;
+}
+.test{
+    position: relative; bottom: 2350px; 
+    left: 500px;
+    background-color: #9fd9ba;
+    color: #0FBF61;
+    width: 120px; height: 35px;
+    text-align: center;
+    border: none;
+    padding: var(--padding); width: 200px; height: 50px;
+}
+.what{
+    position: relative; bottom: 2320px; 
+    left: 500px;
+}
+
+.lorem-2{
+    position: relative; bottom: 2320px; 
+    left: 580px;
+    color: #0FBF61;
+}
+.centre{
+    position: relative; bottom: 2320px; 
+    left: 430px;
+    font-weight: 400;
+}
+.doe{
+    position: relative; bottom: 2300px; 
+    left: 520px;
+}
+.ceo{
+    position: relative; bottom: 2290px; 
+    left: 520px;
+    
+}
+.right{
+    position: relative; bottom: 2500px; 
+    left: 900px;
+}
+.left{
+    position: relative; bottom: 2730px; 
+    left: 100px;
+}
+.blog{
+    position: relative; bottom: 2700px; 
+    left: 500px;
+    background-color: #9fd9ba;
+    color: #0FBF61;
+    width: 120px; height: 35px;
+    text-align: center;
+    border: none;
+    padding: var(--padding); width: 150px; height: 50px;
+}
+.trendy{
+    position: relative; bottom: 2680px; 
+    left: 490px;
+}
+.someone{
+    position: relative; bottom: 2680px; 
+    left: 80px;
+}
+.budget{
+    background-color: #fff;
+    padding: 0px 5px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    height: 200px; width: 320px;
+    position: relative; bottom: 2680px; left: 80px;
+}
+.october{
+    color: #0FBF61;
+}
+.more{
+    color: #0FBF61;
+    background-color: #fff;
+    padding: 20px, 30px;
+    border: none;
+}
+.budget-1{
+    background-color: #fff;
+    padding: 0px 5px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    height: 200px; width: 320px;
+    position: relative; bottom: 3080px; left: 480px;
+}
+.someone-1{
+    position: relative; bottom: 3080px; 
+    left: 480px;
+}
+.budget-2{
+    background-color: #fff;
+    padding: 0px 5px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    height: 200px; width: 320px;
+    position: relative; bottom: 3500px; left: 900px;
+}
+.someone-2{
+    position: relative; bottom: 3500px; 
+    left: 900px;
+}
+.view-1{
+     position: relative; bottom: 3450px; 
+    left: 530px;
+    background-color: green;
+    color: white;
+    width: 120px; height: 35px;
+    text-align: center;
+    border: none;
+    padding: var(--padding);width: 180px; height: 70PX;
+}.contact{
+    position: relative;left: 530px; bottom: 3400px;
+    font-weight: 300;
+    color: #0FBF61;
+    background-color: #9fd9ba;
+    padding: var(--padding);width: 155px; height: 40px;
+}
+.send{
+    position: relative;left: 500px; bottom: 3380px;
+    font-weight: 300;
+}
+.name{
+  width: 500px;
+  height: 80px;
+  background-color: #fff;
+  border: 1px solid black;
+  padding: 20px;
+  position: relative;bottom:3300px ; left: 80px;
+}
+.email{
+  width: 500px;
+  height: 80px;
+  background-color: #fff;
+  border: 1px solid black;
+  padding: 20px;
+  position: relative;bottom:3380px; left: 680px;
+}
+.message{
+  width: 1100px;
+  height: 100px;
+  background-color: #fff;
+  border: 1px solid black;
+  padding: 20px;
+  position: relative;bottom:3280px; left: 80px;
+}
+.send-1{
+    position: relative; bottom: 3200px; 
+    left: 420px;
+    background-color: green;
+    color: white;
+    width: 120px; height: 35px;
+    text-align: center;
+    border: none;
+    padding: 20px;
+    height: 80px;
+    width: 300px;
+    font-weight: 300;
+}
+.port-1{
+color: var(--black);
+font-size: 2rem;
+position: relative; left: 80px;
+bottom: 3000px;
+}
+.ipsum{
+    position: relative; left: 80px; bottom: 2980px;
+    font-weight: 400;
+}
+.apart{
+    position: relative; left: 780px; bottom: 3130px;
+    
+}
+.sent{
+     position: relative; left: 500px; bottom: 3090px;
+     color: #0FBF61; 
+}
+.info{
+    position: relative; left: 500px; bottom: 3090px;
+   
+}
+.career{
+    position: relative; left: 500px; bottom: 3090px;
+   
+}
+.sent-1{
+     position: relative; left: 750px; bottom: 3140px;
+     color: #0FBF61; 
+}
+.info-1{
+    position: relative; left: 750px; bottom: 3140px;
+   
+}
+.career-1{
+    position: relative; left: 750px; bottom: 3140px; 
+}
+.sent-2{
+     position: relative; left: 950px; bottom: 3190px;
+     color: #0FBF61; 
+}
+.info-2{
+    position: relative; left: 950px; bottom: 3190px;
+   
+}
+.career-2{
+    position: relative; left: 950px; bottom: 3190px;
+   
 }
